--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
+    implementation 'com.github.deepakkumardk:KontactPicker:1.3.0'
+
 //    implementation 'com.github.mjn1369:ScaleTouchListener:1.0.0'
 }
