--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
-    implementation 'com.github.deepakkumardk:KontactPicker:1.3.0'
+    implementation 'com.chibatching.kotpref:kotpref:2.9.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.github.deepakkumardk:KontactPicker:1.3.2'
 
 //    implementation 'com.github.mjn1369:ScaleTouchListener:1.0.0'
 }
