--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
+
+realm {
+    syncEnabled = true
+}
 
 android {
     compileSdkVersion 28
@@ -17,6 +22,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    android {
+        kotlinOptions {
+            jvmTarget = '1.8'
         }
     }
 }
@@ -38,6 +52,8 @@ dependencies {
     //room
     implementation 'androidx.room:room-runtime:2.2.1'
     kapt 'androidx.room:room-compiler:2.2.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
@@ -45,7 +61,13 @@ dependencies {
     implementation 'com.chibatching.kotpref:kotpref:2.9.2'
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation 'com.github.deepakkumardk:KontactPicker:1.3.2'
+
+    implementation 'io.realm:android-adapters:3.1.0'
+//    implementation 'com.github.deepakkumardk:KontactPicker:1.3.2'
 
 //    implementation 'com.github.mjn1369:ScaleTouchListener:1.0.0'
+}
+
+androidExtensions {
+    experimental = true
 }
