--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.chibatching.kotpref:kotpref:2.9.2'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
     implementation 'io.realm:android-adapters:3.1.0'
 //    implementation 'com.github.deepakkumardk:KontactPicker:1.3.2'
