--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@react-navigation/native": "6.1.10",
     "@react-navigation/stack": "6.3.21",
+    "@shopify/flash-list": "1.6.3",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-contacts": "7.0.8",
+    "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.15.0",
     "react-native-paper": "5.12.3",
+    "react-native-permissions": "4.1.1",
     "react-native-safe-area-context": "4.9.0",
-    "react-native-screens": "3.29.0"
+    "react-native-screens": "3.29.0",
+    "react-native-vector-icons": "10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +35,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
