--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "6.5.12",
+    "@react-navigation/drawer": "6.6.7",
+    "@react-navigation/material-top-tabs": "6.6.6",
     "@react-navigation/native": "6.1.10",
     "@react-navigation/stack": "6.3.21",
     "@shopify/flash-list": "1.6.3",
@@ -20,8 +23,10 @@
     "react-native-gesture-handler": "2.15.0",
     "react-native-paper": "5.12.3",
     "react-native-permissions": "4.1.1",
+    "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "3.29.0",
+    "react-native-tab-view": "3.5.2",
     "react-native-vector-icons": "10.0.3"
   },
   "devDependencies": {
