--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-contacts": "7.0.8",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.15.0",
+    "react-native-mmkv": "2.12.1",
     "react-native-paper": "5.12.3",
     "react-native-permissions": "4.1.1",
     "react-native-reanimated": "2.2.4",
